some minor fixes - include other mod ores, adjusted spawn rates slightly